# deployment-Test

./: .env  Dockerfile  Jenkinsfile  chatbot_deploy.py  main.py  model.py  oracle23Ai.py  pyproject.toml
