[project]
name = "chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "load-dotenv>=0.1.0",
    "oracledb>=3.4.1",
    "pypdf>=6.6.0",
    "fastapi[standard]"
]
